changed css to stop invisible overlay issue

--- a/client/src/components/MapSection.css
+++ b/client/src/components/MapSection.css
@@ -30,14 +30,14 @@
 .expand-button {
 	width: 100%;
 	position: absolute;
-	top: 15px;
-	right: 10px;
+	top: 150px;
+	right: 40px;
 }
 
 .expand-icon {
 	width: 40px;
 	height: 40px;
-	margin: 128px 31px 724px 1357px;
+	float: right;
 	cursor: pointer;
 }
 
